k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: modern-chair-service
spec:
  type: ClusterIP
  selector:
    app: modern-chair
  ports:
    - port: 80
      targetPort: 80
