k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modern-chair-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: modern-chair.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: modern-chair-service
                port:
                  number: 80
